--- a/IntoducaoWebsitesHtml5Css3/index.css
+++ b/IntoducaoWebsitesHtml5Css3/index.css
@@ -7,7 +7,7 @@ a{
 }
 
 body{
-    background-color: #768fa7;
+    background-color: #000000;
     max-width: 1024px;
     margin: auto;
 }
@@ -61,8 +61,8 @@ body{
 .subtitle{
     text-transform: uppercase;
     align-self: flex-end;
-    border-top: 2px black solid;
-    border-bottom: 2px black solid;
+    border-top: 2px gold solid;
+    border-bottom: 2px gold solid;
     margin-bottom:15px;
 }
 
@@ -76,7 +76,7 @@ body{
 .post{
   background-color: #889e90;  
   padding: 15px;
-  border: 2px solid black;
+  border: 2px solid gold;
   margin-bottom: 15px;
   border-radius: 20px;
 }
